fixed visual alignment of tools-menu items

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ header {
     padding: 0;
 }
 .tools-menu li {
-    padding: 15px 55px;
+    padding: 15px 11%;
     border-top: 2px solid #fff;
     text-align: right;
     font-size: 20px;
